cdk/cdk.out/fa-val1-network.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ]
   }
  },
  "VpcpublicSubnet1Subnet2BB74ED7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcpublicSubnet1RouteTable15C15F8E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcpublicSubnet1RouteTableAssociation4E83B6E4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    }
   }
  },
  "VpcpublicSubnet1DefaultRouteB88F9E93": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ]
  },
  "VpcpublicSubnet1EIP411541E6": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/publicSubnet1"
     }
    ]
   }
  },
  "VpcpublicSubnet1NATGatewayA036E8A6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcpublicSubnet1EIP411541E6",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    },
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcpublicSubnet1DefaultRouteB88F9E93",
    "VpcpublicSubnet1RouteTableAssociation4E83B6E4"
   ]
  },
  "VpcpublicSubnet2SubnetE34B022A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcpublicSubnet2RouteTableC5A6DF77": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcpublicSubnet2RouteTableAssociationCCE257FF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet2SubnetE34B022A"
    }
   }
  },
  "VpcpublicSubnet2DefaultRoute732F0BEB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ]
  },
  "VpcpublicSubnet2EIP811E07A7": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/publicSubnet2"
     }
    ]
   }
  },
  "VpcpublicSubnet2NATGateway4A29FD4F": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcpublicSubnet2EIP811E07A7",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet2SubnetE34B022A"
    },
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/publicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "VpcpublicSubnet2DefaultRoute732F0BEB",
    "VpcpublicSubnet2RouteTableAssociationCCE257FF"
   ]
  },
  "VpcfirewallSubnet1Subnet6F40A205": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "firewall"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/firewallSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcfirewallSubnet1RouteTableF4F9F02F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/firewallSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcfirewallSubnet1RouteTableAssociation34AD809B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcfirewallSubnet1RouteTableF4F9F02F"
    },
    "SubnetId": {
     "Ref": "VpcfirewallSubnet1Subnet6F40A205"
    }
   }
  },
  "VpcfirewallSubnet1DefaultRoute4AAA75AF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcfirewallSubnet1RouteTableF4F9F02F"
    }
   }
  },
  "VpcfirewallSubnet2SubnetCE2A0816": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.2.16/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "firewall"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/firewallSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcfirewallSubnet2RouteTable551AA7C1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/firewallSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcfirewallSubnet2RouteTableAssociationC16503F3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcfirewallSubnet2RouteTable551AA7C1"
    },
    "SubnetId": {
     "Ref": "VpcfirewallSubnet2SubnetCE2A0816"
    }
   }
  },
  "VpcfirewallSubnet2DefaultRoute57D9C54B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet2NATGateway4A29FD4F"
    },
    "RouteTableId": {
     "Ref": "VpcfirewallSubnet2RouteTable551AA7C1"
    }
   }
  },
  "VpcappSubnet1SubnetAE489B2F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "app"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/appSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcappSubnet1RouteTable072E8E09": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/appSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcappSubnet1RouteTableAssociation168BF781": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcappSubnet1RouteTable072E8E09"
    },
    "SubnetId": {
     "Ref": "VpcappSubnet1SubnetAE489B2F"
    }
   }
  },
  "VpcappSubnet2Subnet2449FB56": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "app"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/appSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcappSubnet2RouteTableB76BFC59": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-network/Vpc/appSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcappSubnet2RouteTableAssociation81E96A75": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcappSubnet2RouteTableB76BFC59"
    },
    "SubnetId": {
     "Ref": "VpcappSubnet2Subnet2449FB56"
    }
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ]
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcS3EpAB876DBA": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "VpcappSubnet1RouteTable072E8E09"
     },
     {
      "Ref": "VpcappSubnet2RouteTableB76BFC59"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcDdbEpD2F7119B": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "VpcappSubnet1RouteTable072E8E09"
     },
     {
      "Ref": "VpcappSubnet2RouteTableB76BFC59"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".dynamodb"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcSecretsEpSecurityGroup250C311C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "fa-val1-network/Vpc/SecretsEp/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "Vpc8378EB38",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcSecretsEp8A4D0126": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "VpcSecretsEpSecurityGroup250C311C",
       "GroupId"
      ]
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".secretsmanager"
      ]
     ]
    },
    "SubnetIds": [
     {
      "Ref": "VpcappSubnet1SubnetAE489B2F"
     },
     {
      "Ref": "VpcappSubnet2Subnet2449FB56"
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcSfnEpSecurityGroup1C57CF05": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "fa-val1-network/Vpc/SfnEp/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "Vpc8378EB38",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcSfnEpD6169F95": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "VpcSfnEpSecurityGroup1C57CF05",
       "GroupId"
      ]
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".states"
      ]
     ]
    },
    "SubnetIds": [
     {
      "Ref": "VpcappSubnet1SubnetAE489B2F"
     },
     {
      "Ref": "VpcappSubnet2Subnet2449FB56"
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcComprehendEpSecurityGroup6A22D913": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "fa-val1-network/Vpc/ComprehendEp/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "Vpc8378EB38",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcComprehendEp8D1AF30C": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "VpcComprehendEpSecurityGroup6A22D913",
       "GroupId"
      ]
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".comprehend"
      ]
     ]
    },
    "SubnetIds": [
     {
      "Ref": "VpcappSubnet1SubnetAE489B2F"
     },
     {
      "Ref": "VpcappSubnet2Subnet2449FB56"
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcBedrockEpSecurityGroup73D51ED0": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "fa-val1-network/Vpc/BedrockEp/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "Vpc8378EB38",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcBedrockEp2BD80CA1": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "VpcBedrockEpSecurityGroup73D51ED0",
       "GroupId"
      ]
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".bedrock-runtime"
      ]
     ]
    },
    "SubnetIds": [
     {
      "Ref": "VpcappSubnet1SubnetAE489B2F"
     },
     {
      "Ref": "VpcappSubnet2Subnet2449FB56"
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcLogsEpSecurityGroupA784F057": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "fa-val1-network/Vpc/LogsEp/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "Vpc8378EB38",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcLogsEp5ECCBA8B": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "VpcLogsEpSecurityGroupA784F057",
       "GroupId"
      ]
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".logs"
      ]
     ]
    },
    "SubnetIds": [
     {
      "Ref": "VpcappSubnet1SubnetAE489B2F"
     },
     {
      "Ref": "VpcappSubnet2Subnet2449FB56"
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcKmsEpSecurityGroupB13A2DAD": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "fa-val1-network/Vpc/KmsEp/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "Vpc8378EB38",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcKmsEp4027ED11": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "VpcKmsEpSecurityGroupB13A2DAD",
       "GroupId"
      ]
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".kms"
      ]
     ]
    },
    "SubnetIds": [
     {
      "Ref": "VpcappSubnet1SubnetAE489B2F"
     },
     {
      "Ref": "VpcappSubnet2Subnet2449FB56"
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcStsEpSecurityGroup0326F606": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "fa-val1-network/Vpc/StsEp/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "Vpc8378EB38",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "VpcStsEp177BB741": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "VpcStsEpSecurityGroup0326F606",
       "GroupId"
      ]
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".sts"
      ]
     ]
    },
    "SubnetIds": [
     {
      "Ref": "VpcappSubnet1SubnetAE489B2F"
     },
     {
      "Ref": "VpcappSubnet2Subnet2449FB56"
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     },
     {
      "Key": "Name",
      "Value": "fa-val1-net"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "EgressAllowlist": {
   "Type": "AWS::NetworkFirewall::RuleGroup",
   "Properties": {
    "Capacity": 100,
    "Description": "Gate-B locked egress: College Scorecard API is the ONLY sanctioned external destination",
    "RuleGroup": {
     "RulesSource": {
      "RulesSourceList": {
       "GeneratedRulesType": "ALLOWLIST",
       "TargetTypes": [
        "TLS_SNI",
        "HTTP_HOST"
       ],
       "Targets": [
        ".api.data.gov"
       ]
      }
     }
    },
    "RuleGroupName": "fa-val1-egress-allowlist",
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     }
    ],
    "Type": "STATEFUL"
   }
  },
  "EgressPolicy": {
   "Type": "AWS::NetworkFirewall::FirewallPolicy",
   "Properties": {
    "FirewallPolicy": {
     "StatefulRuleGroupReferences": [
      {
       "ResourceArn": {
        "Fn::GetAtt": [
         "EgressAllowlist",
         "RuleGroupArn"
        ]
       }
      }
     ],
     "StatelessDefaultActions": [
      "aws:forward_to_sfe"
     ],
     "StatelessFragmentDefaultActions": [
      "aws:forward_to_sfe"
     ]
    },
    "FirewallPolicyName": "fa-val1-egress-policy",
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     }
    ]
   }
  },
  "EgressFirewall": {
   "Type": "AWS::NetworkFirewall::Firewall",
   "Properties": {
    "Description": "Inline egress firewall for the governed tool Lambdas",
    "FirewallName": "fa-val1-egress",
    "FirewallPolicyArn": {
     "Fn::GetAtt": [
      "EgressPolicy",
      "FirewallPolicyArn"
     ]
    },
    "SubnetMappings": [
     {
      "SubnetId": {
       "Ref": "VpcfirewallSubnet1Subnet6F40A205"
      }
     },
     {
      "SubnetId": {
       "Ref": "VpcfirewallSubnet2SubnetCE2A0816"
      }
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  },
  "FwEndpoint0A00436F1": {
   "Type": "Custom::AWS",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
      "Arn"
     ]
    },
    "Create": {
     "Fn::Join": [
      "",
      [
       "{\"action\":\"describeFirewall\",\"service\":\"NetworkFirewall\",\"parameters\":{\"FirewallArn\":\"",
       {
        "Fn::GetAtt": [
         "EgressFirewall",
         "FirewallArn"
        ]
       },
       "\"},\"physicalResourceId\":{\"id\":\"fa-val1-fw-ep-us-east-1a\"}}"
      ]
     ]
    },
    "Update": {
     "Fn::Join": [
      "",
      [
       "{\"action\":\"describeFirewall\",\"service\":\"NetworkFirewall\",\"parameters\":{\"FirewallArn\":\"",
       {
        "Fn::GetAtt": [
         "EgressFirewall",
         "FirewallArn"
        ]
       },
       "\"},\"physicalResourceId\":{\"id\":\"fa-val1-fw-ep-us-east-1a\"}}"
      ]
     ]
    },
    "InstallLatestAwsSdk": true
   },
   "DependsOn": [
    "EgressFirewall",
    "FwEndpoint0CustomResourcePolicy0E040433"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "FwEndpoint0CustomResourcePolicy0E040433": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "network-firewall:DescribeFirewall",
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FwEndpoint0CustomResourcePolicy0E040433",
    "Roles": [
     {
      "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2"
     }
    ]
   },
   "DependsOn": [
    "EgressFirewall"
   ]
  },
  "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     }
    ]
   }
  },
  "AWS679f53fac002430cb0da5b7982bd22872D164C4C": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "9b8fce7ae7f25ef82fdbaf6b72523b99d0875c0c9c826642819fb51f11d9b125.zip"
    },
    "Handler": "index.handler",
    "Role": {
     "Fn::GetAtt": [
      "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      "Arn"
     ]
    },
    "Runtime": "nodejs24.x",
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     }
    ],
    "Timeout": 120
   },
   "DependsOn": [
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2"
   ]
  },
  "AppEgress0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "RouteTableId": {
     "Ref": "VpcappSubnet1RouteTable072E8E09"
    },
    "VpcEndpointId": {
     "Fn::GetAtt": [
      "FwEndpoint0A00436F1",
      "FirewallStatus.SyncStates.us-east-1a.Attachment.EndpointId"
     ]
    }
   }
  },
  "ReturnPath0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "10.0.3.0/24",
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    },
    "VpcEndpointId": {
     "Fn::GetAtt": [
      "FwEndpoint0A00436F1",
      "FirewallStatus.SyncStates.us-east-1a.Attachment.EndpointId"
     ]
    }
   }
  },
  "FwEndpoint1F3989F39": {
   "Type": "Custom::AWS",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
      "Arn"
     ]
    },
    "Create": {
     "Fn::Join": [
      "",
      [
       "{\"action\":\"describeFirewall\",\"service\":\"NetworkFirewall\",\"parameters\":{\"FirewallArn\":\"",
       {
        "Fn::GetAtt": [
         "EgressFirewall",
         "FirewallArn"
        ]
       },
       "\"},\"physicalResourceId\":{\"id\":\"fa-val1-fw-ep-us-east-1b\"}}"
      ]
     ]
    },
    "Update": {
     "Fn::Join": [
      "",
      [
       "{\"action\":\"describeFirewall\",\"service\":\"NetworkFirewall\",\"parameters\":{\"FirewallArn\":\"",
       {
        "Fn::GetAtt": [
         "EgressFirewall",
         "FirewallArn"
        ]
       },
       "\"},\"physicalResourceId\":{\"id\":\"fa-val1-fw-ep-us-east-1b\"}}"
      ]
     ]
    },
    "InstallLatestAwsSdk": true
   },
   "DependsOn": [
    "EgressFirewall",
    "FwEndpoint1CustomResourcePolicy43B1A0EE"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "FwEndpoint1CustomResourcePolicy43B1A0EE": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "network-firewall:DescribeFirewall",
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FwEndpoint1CustomResourcePolicy43B1A0EE",
    "Roles": [
     {
      "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2"
     }
    ]
   },
   "DependsOn": [
    "EgressFirewall"
   ]
  },
  "AppEgress1": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "RouteTableId": {
     "Ref": "VpcappSubnet2RouteTableB76BFC59"
    },
    "VpcEndpointId": {
     "Fn::GetAtt": [
      "FwEndpoint1F3989F39",
      "FirewallStatus.SyncStates.us-east-1b.Attachment.EndpointId"
     ]
    }
   }
  },
  "ReturnPath1": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "10.0.4.0/24",
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    },
    "VpcEndpointId": {
     "Fn::GetAtt": [
      "FwEndpoint1F3989F39",
      "FirewallStatus.SyncStates.us-east-1b.Attachment.EndpointId"
     ]
    }
   }
  },
  "LambdaSg30A6108C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Governed tool Lambdas - egress 443 only; destinations constrained by the firewall allowlist",
    "GroupName": "fa-val1-tools",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "TLS only; Network Firewall enforces the domain allowlist",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "app",
      "Value": "edu-financial-aid-agent"
     },
     {
      "Key": "cost-center",
      "Value": "governed-agents"
     },
     {
      "Key": "env",
      "Value": "val1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "Vpc8378EB38"
   }
  },
  "AllowedEgressDomains": {
   "Value": ".api.data.gov"
  },
  "FirewallArn": {
   "Value": {
    "Fn::GetAtt": [
     "EgressFirewall",
     "FirewallArn"
    ]
   }
  },
  "ExportsOutputRefVpcappSubnet1SubnetAE489B2F386690C8": {
   "Value": {
    "Ref": "VpcappSubnet1SubnetAE489B2F"
   },
   "Export": {
    "Name": "fa-val1-network:ExportsOutputRefVpcappSubnet1SubnetAE489B2F386690C8"
   }
  },
  "ExportsOutputRefVpcappSubnet2Subnet2449FB56F27A422B": {
   "Value": {
    "Ref": "VpcappSubnet2Subnet2449FB56"
   },
   "Export": {
    "Name": "fa-val1-network:ExportsOutputRefVpcappSubnet2Subnet2449FB56F27A422B"
   }
  },
  "ExportsOutputFnGetAttLambdaSg30A6108CGroupId30BB2F0D": {
   "Value": {
    "Fn::GetAtt": [
     "LambdaSg30A6108C",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "fa-val1-network:ExportsOutputFnGetAttLambdaSg30A6108CGroupId30BB2F0D"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
